fix scrollbar

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -169,7 +169,7 @@ svg{
 }
 .map-object-info{
     margin-top: 55px;
-    overflow-y: scroll;"
+    overflow-y: scroll;
 }
 .diagrams-section{
     padding-top: 10px;
